--- a/frontend/src/components/Customize/Customize.css
+++ b/frontend/src/components/Customize/Customize.css
@@ -1,13 +1,3 @@
-/* .row {
-	justify-content: center;
-	align-items: center;
-}
-
-.container,
-.row .sections__middle {
-	height: 70vh;
-}
-
 .customize__sizes {
 	position: absolute;
 	top: 130px;
@@ -17,7 +7,11 @@
 	display: flex;
 	flex-direction: column;
 	position: absolute;
-	top: 450px;
+	top: 480px;
+}
+
+.customize__quantity h3 {
+	padding-bottom: 0;
 }
 
 .sizeButton {
@@ -34,4 +28,30 @@
 
 .addButton {
 	margin-top: 20px;
-} */
+}
+
+.addButton:hover {
+	color: white !important;
+}
+
+#testimonials {
+	text-align: center;
+	background-color: #00cccc52;
+	color: #1b1818e3;
+}
+
+.testimonial-text {
+	font-weight: 400;
+	font-size: 3rem;
+	line-height: 1.5;
+}
+
+.testimonial-image {
+	width: 10%;
+	border-radius: 100%;
+	margin: 20px;
+}
+
+.carousel-item {
+	padding: 7% 15%;
+}
